<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?mainBackground"
    android:padding="20dp">

    <TextView
        android:id="@+id/text_choose_difficulty"
        style="@style/generalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:text="@string/choose_difficulty"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/text_easy"
        style="@style/optionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/text_choose_difficulty"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/easy" />

    <TextView
        android:id="@+id/text_medium"
        style="@style/optionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/text_easy"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/medium" />

    <TextView
        android:id="@+id/text_hard"
        style="@style/optionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/text_medium"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/hard" />

</RelativeLayout>