<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?mainBackground"
    tools:context=".features.MainActivity">

    <TextView
        android:id="@+id/text_greeting"
        style="@style/generalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/let_s_start_playing"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/text_your_total_score"
        style="@style/totalScoreText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/your_total_score"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_greeting"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/score"
        style="@style/totalPointScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/text_total_score"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@id/text_your_total_score"
        app:layout_constraintStart_toStartOf="@id/text_your_total_score"
        app:layout_constraintTop_toBottomOf="@id/text_your_total_score" />

    <Button
        android:id="@+id/button_play"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="?blueButtonColor"
        android:text="@string/play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/score" />

    <Button
        android:id="@+id/button_buy_wallpapers"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="?blueButtonColor"
        android:text="@string/buy_wallpapers"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_play" />

</androidx.constraintlayout.widget.ConstraintLayout>